--- a/styles/questions/questions.scss
+++ b/styles/questions/questions.scss
@@ -59,11 +59,7 @@ $base-color: #f4f4f4;
       flex-direction: column;
       padding: 30px 0;
       border-bottom: 1px solid #353131;
-      &.active {
-        img {
-          transform: rotate(180deg);
-        }
-      }
+
       .faq-question {
         display: flex;
         align-items: center;
@@ -86,6 +82,7 @@ $base-color: #f4f4f4;
         &:not(.active) {
           display: none;
         }
+
         p {
           font-size: 14px;
           line-height: 2;
@@ -99,6 +96,12 @@ $base-color: #f4f4f4;
         .info-about-course {
           margin: 30px 24px;
         }
+      }
+      // .question-arrow {
+      //   transform: rotate(180deg);
+      // }
+      .rotate-arrow {
+        transform: rotate(180deg); /* Rotate the arrow 180 degrees */
       }
     }
   }
