--- a/styles/banner/banner.scss
+++ b/styles/banner/banner.scss
@@ -13,9 +13,9 @@ $base-font: wf_f52303b2efea42e1b4aeed119;
 $base-color: rgb(244, 244, 244);
 
 .main-container {
-  padding-top: 82px;
+  padding-top: 90px;
   .banner-container {
-    background: url(../../assets/images/banner.jpg) no-repeat;
+    background: url(../../assets/images/common-images/banner.jpg) no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
