--- a/styles/main/style.scss
+++ b/styles/main/style.scss
@@ -1,10 +1,10 @@
-@import url(styles/header/header.css);
-@import url(styles/banner/banner.css);
-@import url(styles/information/information.css);
-@import url(styles/courses/courses.css);
-@import url(styles/questions/questions.css);
-@import url(styles/footer/footer.css);
-@import url(styles/slider/slider.css);
+@import url(../header/header.css);
+@import url(../banner/banner.css);
+@import url(../information/information.css);
+@import url(../courses/courses.css);
+@import url(../questions/questions.css);
+@import url(../slider/slider.css);
+@import url(../footer/footer.css);
 
 @font-face {
   font-display: block;
