fix banner section responsive

--- a/styles/banner/banner.css
+++ b/styles/banner/banner.css
@@ -29,7 +29,7 @@
 
 @media screen and (max-width: 992px) {
   .main-container .banner-container {
-    background: url(../../assets/images/banner.jpg) no-repeat center;
+    background: url(../../assets/images/common-images/banner.jpg) no-repeat center;
   }
   .main-container .banner-container .banner-title {
     margin-bottom: 0;
