--- a/styles/banner/banner.scss
+++ b/styles/banner/banner.scss
@@ -41,7 +41,8 @@ $base-color: rgb(244, 244, 244);
 @media screen and (max-width: 992px) {
   .main-container {
     .banner-container {
-      background: url(../../assets/images/banner.jpg) no-repeat center;
+      background: url(../../assets/images/common-images/banner.jpg) no-repeat
+        center;
       .banner-title {
         margin-bottom: 0;
         h1 {
