--- a/styles/main/style.scss
+++ b/styles/main/style.scss
@@ -29,6 +29,9 @@
   max-width: 980px;
   width: 100%;
 }
+.main-container {
+  padding-top: 90px;
+}
 
 @media screen and (max-width: 992px) {
   .container {
