--- a/styles/banner/banner.scss
+++ b/styles/banner/banner.scss
@@ -1,3 +1,4 @@
+// implement font.
 @font-face {
   font-display: block;
   font-family: wf_f52303b2efea42e1b4aeed119;
@@ -9,49 +10,49 @@
       format("ttf");
 }
 
-$base-font: wf_f52303b2efea42e1b4aeed119;
-$base-color: rgb(244, 244, 244);
+// declare variables.
 
-.main-container {
-  padding-top: 90px;
-  .banner-container {
-    background: url(../../assets/images/common-images/banner.jpg) no-repeat;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 352px;
-    .banner-title {
-      h1 {
-        margin-bottom: 20px;
-        color: $base-color;
-        font-family: $base-font;
-        font-size: 48px;
-      }
-      h2 {
-        font-size: 34px;
-        color: $base-color;
-        font-family: $base-font;
-      }
+$banner-font-family: wf_f52303b2efea42e1b4aeed119;
+$base-color: #f4f4f4;
+
+// style banner's section.
+.banner-container {
+  background: url(../../assets/images/common-images/banner.jpg) no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 352px;
+  .banner-title {
+    h1 {
+      margin-bottom: 20px;
+      color: $base-color;
+      font-family: $banner-font-family;
+      font-size: 48px;
+    }
+    h2 {
+      font-size: 34px;
+      color: $base-color;
+      font-family: $banner-font-family;
     }
   }
 }
 
+// responsive of banner section.
+
 @media screen and (max-width: 992px) {
-  .main-container {
-    .banner-container {
-      background: url(../../assets/images/common-images/banner.jpg) no-repeat
-        center;
-      .banner-title {
-        margin-bottom: 0;
-        h1 {
-          font-size: 28px;
-          margin-bottom: 2px;
-        }
-        h2 {
-          font-size: 26px;
-        }
+  .banner-container {
+    background: url(../../assets/images/common-images/banner.jpg) no-repeat
+      center;
+    .banner-title {
+      margin-bottom: 0;
+      h1 {
+        font-size: 28px;
+        margin-bottom: 2px;
+      }
+      h2 {
+        font-size: 26px;
       }
     }
   }
