--- a/styles/main/style.css
+++ b/styles/main/style.css
@@ -14,7 +14,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: wf_dd28b3957391427eb54de1c9e;
+  font-family: wf_dd28b3957391427eb54de1c9e, sans-serif;
 }
 
 .container {
