Add responsive header scroll functionality

--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -2,13 +2,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #1a1e1f;
-  transition: background-color 0.4s, width 0.4s;
-  width: 100%;
-  height: 90px;
   position: fixed;
   top: 0;
   left: 0;
+  background-color: #1a1e1f;
+  transition: background-color 0.4s, width 0.4s;
+  transition: transform 0.4s;
+  width: 100%;
+  height: 90px;
   z-index: 2;
 }
 .site-header .mobile-menu-toggle {
