--- a/styles/main/style.scss
+++ b/styles/main/style.scss
@@ -1,3 +1,4 @@
+// import scss files
 @import url(../header/header.css);
 @import url(../banner/banner.css);
 @import url(../information/information.css);
@@ -6,6 +7,7 @@
 @import url(../slider/slider.css);
 @import url(../footer/footer.css);
 
+// implement the main font
 @font-face {
   font-display: block;
   font-family: wf_dd28b3957391427eb54de1c9e;
