--- a/styles/banner/banner.scss
+++ b/styles/banner/banner.scss
@@ -45,6 +45,7 @@ $base-color: #f4f4f4;
   .banner-container {
     background: url(../../assets/images/common-images/banner.jpg) no-repeat
       center;
+    height: 300px;
     .banner-title {
       margin-bottom: 0;
       h1 {
